--- a/style.css
+++ b/style.css
@@ -210,7 +210,45 @@ main {
     box-shadow: 0 0 20px var(--accent);
 }
 
-.btn:focus {
-    outline: 2px solid var(--accent);
-    outline-offset: 3px;
+.about__content {
+    display: flex;
+    flex-flow: column wrap;
+    padding: 6em 0;
+}
+
+.about__content > h2 {
+    text-align: center;
+    margin: 3rem 0;
+    font-size: 1.8em;
+}
+
+.about__item {
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.about__text {
+    flex: 0 1 500px;
+    text-align: right;
+}
+
+.about__text h2 {
+    color: var(--text-primary);
+    font-size: 1.6em;
+    margin-bottom: 1.3rem;
+}
+
+.about__text p {
+    color: var(--text-secondary);
+    margin-bottom: 45px;
+    font-size: 1.1em;
+    line-height: 1.5em;
+}
+
+.about__img img {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
 }
