estiliza seção contact e footer

--- a/style.css
+++ b/style.css
@@ -361,3 +361,57 @@ main {
 .skill__item:hover i {
     transform: scale(1.2);
 }
+
+.contact__content {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 8em 0;
+}
+
+.contact__content h2 {
+    text-align: center;
+    margin: 3rem 0 1rem;
+    font-size: 1.8em;
+}
+
+.contact__link {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
+    gap: 20px;
+}
+
+.contact__card {
+    border: 2px solid var(--color);
+    border-radius: 24px;
+}
+
+.contact__card a {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding: 20px 35px;
+    border-radius: 20px;
+    gap: 5px;
+    color: var(--color);
+    transition: all 0.2s ease;
+}
+
+.contact__card a:hover {
+    color: var(--text-primary);
+    background-color: var(--color);
+    box-shadow: 0 0 10px  var(--shadow);
+}
+
+.footer {
+    padding: 2rem 0;
+    text-align: center;
+    font-size: 1em;
+    color: var(--text-secondary);
+    border-top: 1px solid var(--divider);
+}
