--- a/style.css
+++ b/style.css
@@ -436,3 +436,39 @@ main {
     z-index: -1;
     background: transparent;
 }
+
+@media screen and (max-width: 1380px) {
+    .about__item {
+        flex-flow: column-reverse nowrap;
+    }
+
+    .about__text {
+        flex: 0 1 200px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .nav__content {
+        justify-content: center;
+    }
+
+    .nav__logo {
+        font-size: 1.6em;
+    }
+
+    .nav__link {
+        display: none;
+    }
+
+    .about__text {
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .hero__content h1 {
+        font-size: 3em;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+}
